--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "angularfire2": "^5.0.0-rc.10",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "firebase": "^5.0.4",
+    "font-awesome": "^4.7.0",
     "install": "^0.11.0",
     "npm": "^6.1.0",
     "rxjs": "^6.0.0",
